# DICOMium

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  entrypoint.sh  nginx.conf  supervisord.conf
assets/: generate-icons.py
backend/: alembic.ini  pyproject.toml
backend/app/: cli.py  config.py  dependencies.py  errors.py  logging_conf.py  main.py
backend/app/db/: base.py  engine.py  init.py  migrate.py
backend/app/models/: __init__.py  instance.py  mfa.py  preferences.py  series.py  session.py  study.py  upload_job.py  user.py
backend/app/routes/: account.py  admin.py  auth.py  dicomweb_qido.py  dicomweb_wado.py  health.py  library.py  uploads.py
backend/app/schemas/: account.py  auth.py  library.py  upload.py
backend/app/services/: archive.py  auth.py  avatar.py  crypto.py  dicom_json.py  dicom_meta.py  dicom_scan.py  frames.py  geometry.py  ingest.py  jobs.py  multipart.py  recovery.py  slug.py  storage.py  thumbnails.py  totp.py  webauthn.py
backend/app/tests/: conftest.py  test_error_codes.py  test_geometry.py  test_library_list.py  test_mfa_login.py  test_migrations.py  test_multipart.py  test_preferences.py  test_slug.py  test_totp.py  test_webauthn.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_user_language.py  0003_job_message_code.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/public/: site.webmanifest
(+89 files in other folders)
